Shuffle the build around a bit
I did split it into separate projects, but then I put them back together
again because they weren't worth the effort.

Signed-off-by: Andrew Aylett <andrew@aylett.co.uk>